add change password feature

--- a/Job_Portal_Project_profile_mastering/templates/profilenav.html
+++ b/Job_Portal_Project_profile_mastering/templates/profilenav.html
@@ -26,4 +26,7 @@
             <a href="{% url 'content' %}">Content</a>
         </button>
     {% endif %}
+    <button class="button">
+        <a href="{% url 'change_pass' %}">Change Password</a>
+    </button>
 </div>
